Revision history for ExtUtils-Builder-Compiler

{{$NEXT}}
          - Remove nologo argument to MSVC

0.030     2025-04-25 13:12:46+02:00 Europe/Brussels
          - Only set MSVC export for shared-library and loadable-object

0.029     2025-04-23 11:25:05+02:00 Europe/Brussels
          - Correctly set export value for MSVC

0.028     2025-04-09 18:03:07+02:00 Europe/Brussels
          - Add push_args to try_compile_run
          - Add defines argument to try_compile_run

0.027     2025-04-05 19:45:01+02:00 Europe/Brussels
          - Adapt to load_extension rename
          - Add missing dirname include to Profile::Perl

0.026     2025-03-28 12:37:34+01:00 Europe/Brussels
          - Add definition file to MSVC linker arguments

0.025     2025-03-16 23:03:34+01:00 Europe/Brussels
          - Add missing abs2rel import for module_for_xs delegate

0.024     2025-03-14 16:57:33+01:00 Europe/Brussels
          - Pass module name to prelink for loadable object

0.023     2025-03-13 16:34:20+01:00 Europe/Brussels
          - Restore module_for_xs delegate
          - Make module work on static perls
          - Allow for multiple profiles in compilation
          - Fix libpath argument in MSVC linker
          - Ignore manifest files on MSVC for now

0.022     2024-09-13 14:11:23+02:00 Europe/Brussels
          - Fix quiet argument of try_compile_run

0.021     2024-09-13 10:59:41+02:00 Europe/Brussels
          - Use tempdir correctly in try_compile_run
          - Add quiet argument to try_compile_run

0.020     2024-08-10 18:16:16+02:00 Europe/Brussels
          - Correctly pass lddlflags in Linker creation
          - Pass ld instead of cc to linker except on AIX

0.019     2024-08-05 21:04:22+02:00 Europe/Brussels
          - Revert critical breakage in try_compile_run

0.018     2024-08-05 16:00:45+02:00 Europe/Brussels
          - Add try_find_library_dirs_for
          - Fix find_libs_for to pass library correctly